fixed issue with shortcut not being visible on light themes in search hint

--- a/webapp/channels/src/components/threading/global_threads/thread_item/thread_item.scss
+++ b/webapp/channels/src/components/threading/global_threads/thread_item/thread_item.scss
@@ -156,3 +156,16 @@
         margin-right: 10px;
     }
 }
+
+.no-results__wrapper {
+    .thread-no-results-subtitle-shortcut {
+        .shortcut-key{
+            color: rgba(var(--center-channel-color-rgb), 0.75);
+            background-color: rgba(var(--center-channel-color-rgb), 0.08);
+            padding: 2px 5px;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 16px;
+        }
+    }
+}
